# ssh-dashboard

./: Cargo.toml  README.md  example-config.toml
.cargo/: config.toml
docs/design/: ssh-dashboard-prd.md  ssh-dashboard-tasks.md
src/: config.rs  lib.rs  logging.rs  main.rs  process.rs  state.rs  tui.rs
tests/: config_test.rs  logging_test.rs  process_test.rs
