[package]
name = "ssh-dashboard"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
dirs = "6.0"
libc = "0.2"
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3"

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "z"
panic = "abort"
strip = true
